# PaddleSuite

./: README.md  README_en.md  layout_parsing.yaml  mkdocs.yml  paddle_to_onnx.py  requirements.txt
.github/ISSUE_TEMPLATE/: 4_gui.md
.github/workflows/: deploy_docs.yml
.precommit/: check_custom.py
api_examples/pipelines/: test_formula_recognition.py  test_layout_parsing_v2.py  test_object_detection.py  test_ocr.py  test_pp_chatocrv4.py  test_seal_recognition.py  test_table_recognition_v2.py
docs/: CHANGLOG.en.md  CHANGLOG.md  index.en.md  index.md
docs/installation/: installation_en.md
docs/other_devices_support/: how_to_contribute_device.en.md  how_to_contribute_device.md  how_to_contribute_hardware.md  how_to_contribute_model.en.md  how_to_contribute_model.md  (+11 more)
libs/paddlex-hpi/: .flake8  pyproject.toml  requirements.txt
libs/paddlex-hpi/scripts/: obfuscate_wheels.sh
libs/paddlex-hpi/src/paddlex_hpi/: __init__.py  _config.py
libs/paddlex-hpi/src/paddlex_hpi/models/: _enc.py  anomaly_detection.py  base.py  formula_recognition.py  general_recognition.py  image_classification.py  image_unwarping.py  instance_segmentation.py  multilabel_classification.py  object_detection.py  semantic_segmentation.py  table_recognition.py  text_detection.py  text_recognition.py  ts_ad.py  ts_cls.py  ts_fc.py
libs/paddlex-hpi/tests/models/: base.py  test_image_classification.py  test_instance_segmentation.py  test_multilabel_classification.py  test_semantic_segmentation.py
paddlex/: eval.py  main_layout_parse.py  paddle2onnx_requirements.txt  paddlex_cli.py
(+568 files in other folders)
