[build-system]
requires = ["setuptools >= 69"]
build-backend = "setuptools.build_meta"

[project]
name = "paddlex-hpi"
version = "0.0.0.dev0"
description = ""
readme = "README.md"
authors = []
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies.test = {file = ["test_requirements.txt"]}

[tool.isort]
profile = "black"
src_paths = ["src"]

[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "xdeploy.*",
    "paddlex.*",
]
ignore_missing_imports = true
